Fix layout issues in PhotoItem page

--- a/client/src/pages/photoItem/PhotoItem.module.scss
+++ b/client/src/pages/photoItem/PhotoItem.module.scss
@@ -1,17 +1,20 @@
 @import '../../styles//core.scss';
 
 .container {
-  @media screen and (min-width: 768px) {
-    display: grid;
-    grid-template-columns: minmax(100px, 1fr) 415px;
-    grid-template-rows: 1fr auto;
+  margin-top: 100px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  @include sm {
+    flex-direction: column;
   }
   &__left {
-    @media screen and (min-width: 768px) {
-      grid-column: 1;
+    flex-basis: 65%;
+    @include sm {
+      flex-basis: 100%;
     }
     &__prev {
-      background-color: #fff;
+      background-color: $black;
       display: flex;
       flex-direction: column;
       height: 100%;
@@ -30,10 +33,12 @@
           padding-top: 1em;
         }
         &_title {
+          text-align: center;
           font-size: 18px;
           font-weight: 400;
         }
         &_text {
+          text-align: center;
           padding-bottom: 14px;
           font-size: 14px;
         }
@@ -64,7 +69,7 @@
           position: relative;
           z-index: 2;
           &_img {
-            max-height: 768px;
+            max-height: 1024px;
             max-width: 100%;
             border-style: none;
           }
@@ -73,49 +78,36 @@
     }
   }
   &__right {
-    border-bottom: 1px solid #e3e3e3;
-    border-left: 1px solid #e3e3e3;
     display: flex;
     justify-content: center;
-    @media screen and (min-width: 768px) {
-      grid-row-end: 3;
-      grid-row-start: 1;
-    }
-    &__panel {
-      display: flex;
-      flex-direction: column;
-      height: 100%;
-      &__purchase {
-        display: block;
-        flex-grow: 1;
-        &_header {
-          margin: 20px auto;
-          display: inline-block;
-          flex: 0 1 auto;
-          text-align: center;
+    flex-direction: column;
+    flex-basis: 35%;
+    height: 100%;
+
+    &__purchase {
+      display: block;
+      flex-grow: 1;
+      &_header {
+        margin: 20px auto;
+        font-size: $font-size-lage;
+        display: inline-block;
+        text-align: center;
+        width: 100%;
+      }
+      &__body {
+        margin-left: 20px;
+        margin-right: 20px;
+        @media screen and (min-width: 768px) {
+          margin-left: 42px;
+          margin-right: 42px;
         }
-        &__body {
-          margin-left: 20px;
-          margin-right: 20px;
-          @media screen and (min-width: 768px) {
-            margin-left: 42px;
-            margin-right: 42px;
-          }
-          &__top {
-            display: block;
-          }
+        &__top {
+          display: block;
         }
       }
-      &__details {
-        background-color: #f4f4f4;
-      }
     }
-  }
-  &__divider {
-    background-color: #ccc;
-    height: 1px;
-    @media screen and (min-width: 768px) {
-      display: none;
+    &__details {
+      height: 800px;
     }
   }
 }
